fixed stupid wrap issue

--- a/portfolio-v2/src/Components/Card/index.scss
+++ b/portfolio-v2/src/Components/Card/index.scss
@@ -125,6 +125,7 @@
     justify-content: start;
     width: fit-content;
     transition: all 0.2s ease-in-out;
+    flex-wrap: wrap;
 }
 .items{
     background-color: rgb(255, 255, 255);
